--- a/AutoAppo_JosueVa/AutoAppo_JosueVa/AutoAppo_JosueVa.csproj
+++ b/AutoAppo_JosueVa/AutoAppo_JosueVa/AutoAppo_JosueVa.csproj
@@ -17,5 +17,8 @@
     <EmbeddedResource Update="Views\AppoLoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\AppoSignUpPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
