add code request

--- a/AutoAppo_JosueVa/AutoAppo_JosueVa/AutoAppo_JosueVa.csproj
+++ b/AutoAppo_JosueVa/AutoAppo_JosueVa/AutoAppo_JosueVa.csproj
@@ -21,6 +21,9 @@
     <EmbeddedResource Update="Views\AppoOptionsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\AppoRecoverPasword.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\AppoSignUpPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
